2006-06-06  Csaba Henk <csaba.henk@creo.hu>
	* Option parsing refactorization:
	   - Generic suboption parsing code separated into a dedicated classes
	   - Implement FUSE option parsing by subclassing the aforementioned
	     classes
	* Add support for querying any fs method in feature requester.
	* Replace `foo.has_key(bar)' with `bar in foo'.
	* Updated docs.
	* Restructured source tree:
	   - README -> README.historic
	   - xmp.py -> example/xmp.py
	   - added example/hello.py (contributed by Andrew Straw)
	   - added example/_find_fuse_parts.py (aux script)

2006-06-04  Csaba Henk <csaba.henk@creo.hu>
	* Added support for the rest of FUSE methods:
	  flush, fgetattr, ftruncate, access, getxattr, listxattr, setxattr,
	  removexattr.
	* Added interface for retrieving FUSE API version and requiring
	  features from the underlying library.
	* Sanitize xmp.py methods.

2006-06-01  Csaba Henk <csaba.henk@creo.hu>
	* Distillate Fuse instance -> <file> method proxying code into a
	  dedicated class.

2006-05-31  Csaba Henk <csaba.henk@creo.hu>
	* Update code so that it can use newer FUSE features:
	   - Stage 1: make file I/O stateful.
	     + If `open' methods returns an object, that will
	       be preserved and passed around to I/O requests
	       on the file in question.
	     + Added support for `create' method
	     + Wrap this mechanism into OO: file I/O methods
	       can be implemented via an user specified class.
	     + Add warning to README.new_fusepy_api.
	   - Stage 2: update directory related features
	     + Switch to readdir() from deprecated getdir() method.
	     + Add support for new directory methods.
	     + Make directory I/O stateful.
	     + Extend OO wrappers to directories.
	     + Switch from sequence based data transfer model to general
	       iterator based one.
	     + Add a dedicated class to carry directory entries instead
	       of using tuples.
	     + Add compact hooks.

2006-05-29  Csaba Henk <csaba.henk@creo.hu>